{
    "name": "Attack",
    "maps": [
        {
            "name": "Attacks",
            "id": "636e0729-c5b5-40d9-a699-f306190670bb",
            "actions": [
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "60141ffc-39c8-4bbe-84b5-3c04ada8cade",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "85e354a8-647c-4fd5-98a1-1d08c9b49329",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c0a93643-4df8-41e1-ab2f-f7b492e35483",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5efea951-4576-4a92-8994-e502cfefaea8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}